@@ -1,8 +1,8 @@
 Package: tolerance
 Type: Package
 Title: Functions for calculating tolerance intervals
-Version: 0.5.1
-Date: 2012-08-28
+Version: 0.5.2
+Date: 2012-09-23
 Author: Derek S. Young
 Maintainer: Derek S. Young <dsy109@stat.psu.edu>
 Depends: rgl, stats4
@@ -13,6 +13,6 @@ Description: Tolerance limits provide the limits between which we can
         Plotting is also available for tolerance limits of continuous
         random variables.
 License: GPL (>= 2)
-Packaged: 2012-08-28 03:52:19 UTC; dsy109
+Packaged: 2012-09-22 19:27:40 UTC; dsy109
 Repository: CRAN
-Date/Publication: 2012-08-28 05:32:11
+Date/Publication: 2012-09-22 20:02:03
